# berendsshalai-systems-lab

./: .env.example  .gitignore  ARCHITECTURE_DECISIONS.md  CITATION.cff  CLEAN_ROOM_POLICY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COURSE_CURRICULUM.md  COURSE_STANDARD.md  DESIGN_SYSTEM.md  ECOSYSTEM.md  ECOSYSTEM_ROADMAP.md  FREE_TIER_DEPLOYMENT_PLAN.md  GITHUB_PUBLICATION_PLAN.md  GOVERNANCE.md  HANDOFF.md  LICENSE  MCP_ECOSYSTEM_PLAN.md  MCP_STANDARD.md  NOTICE  PRIVACY.md  PROJECT_REGISTRY.json  PROJECT_REGISTRY.yml  PUBLICATION_MATRIX.md  PUBLICATION_REPORT.md  README.md  REDACTION_PLAN.md  RISK_REGISTER.md  SECURITY.md  SEO_CONTENT_MAP.md  SEO_STANDARD.md  SOCIAL_CONTENT_STANDARD.md  SOCIAL_CONTENT_SYSTEM.md  SYSTEM_INVENTORY.md  WIX_FINAL_LAYER_PLAN.md
projects/attendance-reconciliation-engine/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLEAN_ROOM_DECLARATION.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  COURSE.md  DATA_PROVENANCE.md  HANDOFF.md  INSTALL.md  MCP.md  NON_AFFILIATION.md  NOTICE  PRIVACY.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  TRADEMARKS.md  pyproject.toml
projects/attendance-reconciliation-engine/.github/: PULL_REQUEST_TEMPLATE.md
projects/attendance-reconciliation-engine/case-study/: attendance-reconciliation.md
projects/attendance-reconciliation-engine/course/: module-attendance-reconciliation.md
projects/attendance-reconciliation-engine/demo/: app.js  index.html  styles.css
projects/attendance-reconciliation-engine/docs/: NON_TECHNICAL_GUIDE.md  RECRUITER_BRIEF.md  (+2 more)
(+55 files in other folders)
